# repology_bot

./: .gitignore  README.md  config.toml.example  hello.py  install-service.sh  main.py  pyproject.toml  repology-bot.service
bot/: handlers.py  keyboards.py  maintainer_handlers.py  middleware.py  search_handlers.py  subscription_handlers.py
core/: config.py  database.py  logger.py  scheduler.py
models/: package.py  user.py
services/: notification.py  package_checker.py  package_merger.py  rdb.py  repology.py
utils/: formatting.py
