[project]
name = "repology-bot"
version = "0.1.0"
description = "Telegram bot for tracking outdated packages in Repology"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.13.0",
    "aiohttp>=3.9.0",
    "aiosqlite>=0.19.0",
    "apscheduler>=3.10.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "python-dateutil>=2.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["bot", "core", "models", "services", "utils"]

[tool.uv]
dev-dependencies = []
